<resources>
    <string name="app_name">Me Fitness</string>

    <string name="entry_name">Por favor digite o seu nome</string>
    <string name="entry_email">Por favor digite o seu email</string>
    <string name="entry_passsword">Por favor digite a sua senha</string>
    <string name="entry_confirm_password">Por favor confirme a sua senha</string>
    <string name="entry_treino_name">Por favor escreva um nome para o treino</string>
    <string name="entry_treino_description">Por favor escreva alguma descrição</string>

    <string name="name_text">Nome</string>
    <string name="password_text">Senha</string>
    <string name="confirm_password_text">Insira novamente sua senha</string>
    <string name="email_text">Email</string>
    <string name="login_text">Entrar</string>
    <string name="description_text">Descrição</string>
    <string name="add_text">Adicionar</string>
    <string name="treino_add_text">Treino adicionado</string>
    <string name="treino_add_failure_text">Erro ao adicionar treino</string>
    <string name="treino_edit_text">Treino editado com sucesso</string>
    <string name="treino_edit_failure_text">Erro ao editar o treino</string>

    <string name="have_account">Já tem uma conta?</string>
    <string name="sign_up">Cadastre-se</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="not_have_account">Não tem uma conta?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string-array name="categorias">
        <item>Aerobico</item>
        <item>Meditação</item>
        <item>Hipertrofia</item>
        <item>Musculação</item>
    </string-array>

    <string-array name="difi">
        <item>Fácil</item>
        <item>Media</item>
        <item>Difícil</item>
    </string-array>
</resources>