<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">
    <LinearLayout
        android:layout_gravity="top"
        android:orientation="vertical"
        android:id="@+id/linearlogo"
        android:background="@drawable/gradient"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_directions_run_24"
            android:layout_width="match_parent"
            android:layout_height="100dp"></ImageView>
        <TextView
            android:textColor="@color/white"
            app:layout_anchorGravity="center|bottom"
            android:layout_margin="10dp"
            android:textSize="30dp"
            android:textAlignment="center"
            app:layout_anchor="@id/linearlogo"
            android:text="@string/app_name"
            android:layout_gravity="center|bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:layout_anchor="@id/linearlogo"
        android:layout_gravity="bottom"
        app:layout_anchorGravity="bottom"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginTop="220dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:hint="@string/email_text"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    app:startIconDrawable="@drawable/ic_baseline_lock_24"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_gravity="bottom"
    app:layout_anchorGravity="bottom"
    app:layout_anchor="@id/login_email"
    android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:hint="@string/password_text"
        android:layout_height="wrap_content"/>
</com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:text="@string/forgot_password"
        android:layout_gravity="bottom"
        android:textStyle="bold"
        android:textSize="16dp"
        android:textColor="@color/black"
        app:layout_anchorGravity="bottom|right"
        app:layout_anchor="@id/login_password"
        android:layout_marginTop="335dp"
        android:background="@drawable/ripple_effect"
        android:id="@+id/login_tVForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>

    <Button
        android:id="@+id/login_btnLogin"
        android:textColor="@color/white"
        android:layout_gravity="top"
        app:layout_anchorGravity="top"
        android:layout_margin="100dp"
        app:layout_anchor="@id/login_tVSignUp"
        android:layout_width="match_parent"
        android:text="@string/login_text"
        android:background="@drawable/ripple_effect_with_background"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginBottom="50dp"
        android:text="@string/not_have_account"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_gravity="bottom|center"
        android:textColor="@color/black"
        android:id="@+id/login_tVSignUp"
        android:background="@drawable/ripple_effect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>




</androidx.coordinatorlayout.widget.CoordinatorLayout>